[workspace]
resolver = "2"

members = [
  "account/account-api",
  "account/account-common",
  "account/account-uniffi",
  "calendar/calendar-api",
  "calendar/calendar-common",
  "core/core-api",
  "core/core-common",
  "core/event-loop",
  "crypto/crypto-calendar",
  "crypto/crypto-inbox",
  "crypto/crypto-inbox-mime",
  "crypto/crypto-notifications",
  "crypto/crypto-pin-hash",
  "mail/mail-api",
  "mail/mail-common",
  "mail/mail-common-derive",
  "mail/mail-html-transformer",
  "mail/mail-html-transformer-fuzz",
  "mail/mail-tui",
  "mail/mail-uniffi",
  "shared/action-queue",
  "shared/api-utils",
  "shared/event-service",
  "shared/ical",
  "shared/ical-cli",
  "shared/ical-fuzz",
  "shared/ical-tz",
  "shared/issue-reporter-service",
  "shared/issue-reporter-service-uniffi",
  "shared/log-service",
  "shared/mailto",
  "shared/network-monitor-service",
  "shared/observability",
  "shared/canonical-email",
  "shared/sqlite3",
  "shared/stash",
  "shared/stash-macros",
  "shared/task-service",
  "shared/vcard",
  "uniffi/uniffi-bindgen",
  "uniffi/uniffi-common",
  "uniffi/uniffi-macros",
  "uniffi/uniffi-runtime",
]

[workspace.package]
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
aes-gcm = { version = "0.10", features = ["zeroize", "std"] }
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
argon2 = { version = "0.5.3", features = ["default", "std"] }
bitflags = { version = "2.8.0" }
bytes = "1.9"
cfg-if = "1"
chrono = { version = "0.4", features = ["default", "serde"] }
clap = { version = "4.5.27", features = ["derive"] }
color-backtrace = "0.6.1"
common-multipart-rfc7578 = { version = "0.7.0", default-features = false }
cookie = "0.18.1"
derivative = "=2.2.0"
non-empty-string = { version = "0.2.5", features = ["serde"] }
derive_more = { version = "2.0", features = ["full"] }
ext-php-rs = "0.13.1"
fancy-regex = "0.14.0"
fallible-iterator = "0.3"
flume = "0.11"
futures = "0.3.31"
function_name = "0.3.0"
futures-util = "0.3.31"
hex = "0.4.3"
ical = { version = "0.11", features = ["generator"] }
include_dir = { version = "0.7", features = ["glob"] }
indoc = "2.0.5"
insta = { version = "1.42.0", features = ["toml"] }
indexmap = { version = "2.7.1", features = ["serde"] }
itertools = "0.13.0"
html2text = "0.16.2"
fxhash = "=0.2.1" # used by kuchikiki and tui-logger , force to this version to avoid surprises
jiff = { version = "0.2.4", features = ["serde"] }
file-format = { version = "0.26.0", features = ["reader"] }
mime = "0.3.17"
parking_lot = "0.12.3"
paste = "1"
pin-project = "1"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full"] }
rand = "0.8"
regex = "1.11.1"
rmp = "0.8"
rmp-serde = "1.3"
rusqlite = { version = "0.32.1", features = [
  "bundled",
  "chrono",
  "functions",
  "trace",
  "uuid",
] }
sqlite-watcher = { version = "0.5.1", features = ["rusqlite"] }
slotmap = "1.0.7"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.5"
serde_json = "1.0.137"
serde_repr = "0.1"
serde_with = "3.12.0"
serde_qs = "0.13.0"
sha2 = "0.10.9"
smart-default = "0.7.1"
strum = "0.26.3"
tempfile = "3.21.0"
test-case = "3.3.1"
thiserror = "1.0.69"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tynm = "0.1"
typed-builder = "0.20.0"
unicode-segmentation = "1.12.0"
uniffi_bindgen = "0.29"
uniffi_meta = "0.29"
uniffi = { version = "0.29.1", features = ["tokio"] }
url = { version = "2.5.4", features = ["serde"] }
utf8-width = "0.1.7"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
velcro = "0.5.4"
walkdir = "2.5.0"
wiremock = "0.6.2"
wiremock-multipart = "1.0.1"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
libfuzzer-sys = "0.4"
mockall = "0.13.1"
quick-xml = "0.38.2"
reqwest = { version = "0.12.23", features = [
  "rustls-tls",
], default-features = false }
criterion = "0.7.0"
pprof = { version = "0.15.0", features = ["criterion", "flamegraph"] }
topological-sort = "0.2.2"
percent-encoding = "2.3.2"
zeroizing-alloc = "0.1.0"

[workspace.dependencies.email_address]
version = "0.2.9"
features = ["serde"]
git = "https://github.com/LBeernaertProton/rust-email_address.git"
branch = "feat/allow-long-local-parts"

[workspace.dependencies.proton-api-utils]
version = "0.1.0"
path = "shared/api-utils"

[workspace.dependencies.proton-account-api]
version = "0.1"
path = "account/account-api"
registry = "proton"

[workspace.dependencies.proton-account-common]
version = "0.1"
path = "account/account-common"
registry = "proton"

[workspace.dependencies.proton-account-uniffi]
path = "account/account-uniffi"
registry = "proton"

[workspace.dependencies.proton-action-queue]
version = "0.7"
path = "shared/action-queue"
registry = "proton"

[workspace.dependencies.proton-core-api]
version = "0.8"
path = "core/core-api"
registry = "proton"

[workspace.dependencies.proton-core-common]
version = "0.9"
path = "core/core-common"
registry = "proton"
features = ["sql"]

[workspace.dependencies.proton-event-loop]
version = "0.7"
path = "core/event-loop"
registry = "proton"

[workspace.dependencies.proton-sqlite3]
version = "0.7"
path = "shared/sqlite3"
registry = "proton"

[workspace.dependencies.proton-canonical-email]
version = "0.1"
path = "shared/canonical-email"
registry = "proton"

[workspace.dependencies.proton-ical]
path = "shared/ical"

[workspace.dependencies.proton-ical-cli]
path = "shared/ical-cli"

[workspace.dependencies.proton-ical-tz]
path = "shared/ical-tz"

[workspace.dependencies.proton-vcard]
version = "0.2"
path = "shared/vcard"
registry = "proton"

[workspace.dependencies.stash]
version = "0.2"
path = "shared/stash"
registry = "proton"

[workspace.dependencies.stash-macros]
version = "0.2"
path = "shared/stash-macros"
registry = "proton"

[workspace.dependencies.proton-mail-api]
version = "0.5"
path = "mail/mail-api"
registry = "proton"

[workspace.dependencies.proton-mail-common]
version = "0.8"
path = "mail/mail-common"
registry = "proton"
features = ["sql"]

[workspace.dependencies.proton-mail-common-derive]
version = "0.1"
path = "mail/mail-common-derive"

[workspace.dependencies.proton-mail-uniffi]
path = "mail/mail-uniffi"
registry = "proton"

[workspace.dependencies.uniffi-macros]
path = "uniffi/uniffi-macros"

[workspace.dependencies.uniffi-runtime]
path = "uniffi/uniffi-runtime"

[workspace.dependencies.uniffi-common]
path = "uniffi/uniffi-common"

[workspace.dependencies.proton-crypto-inbox]
version = "0.9.0"
path = "crypto/crypto-inbox"
registry = "proton"

[workspace.dependencies.proton-crypto-inbox-mime]
version = "0.4.1"
path = "crypto/crypto-inbox-mime"
registry = "proton"

[workspace.dependencies.proton-crypto-account]
version = "0.12.3"
registry = "proton"
features = ["sql"]

[workspace.dependencies.proton-crypto]
version = "0.7.1"
registry = "proton"

[workspace.dependencies.proton-crypto-subtle]
version = "0.1.0"
registry = "proton"
features = ["legacy"]

[workspace.dependencies.proton-crypto-notifications]
version = "0.1"
path = "crypto/crypto-notifications"
registry = "proton"

[workspace.dependencies.proton-crypto-pin-hash]
version = "0.1"
path = "crypto/crypto-pin-hash"
registry = "proton"

[workspace.dependencies.muon]
git = "https://gitlab.protontech.ch/jhoulahan/muon.git"
rev = "830f4bcf997ed8ad0f1f2a82e2b668d109d75b2f"
features = ["unsealed"]

[workspace.dependencies.proton-log-service]
path = "shared/log-service"
version = "0.1"
registry = "proton"

[workspace.dependencies.proton-task-service]
version = "0.1"
path = "shared/task-service"
registry = "proton"

[workspace.dependencies.proton-calendar-api]
version = "0.1"
path = "calendar/calendar-api"
registry = "proton"

[workspace.dependencies.proton-calendar-common]
version = "0.1"
path = "calendar/calendar-common"
registry = "proton"

[workspace.dependencies.proton-crypto-calendar]
version = "0.1"
path = "crypto/crypto-calendar"
registry = "proton"

[workspace.dependencies.proton-mail-html-transformer]
version = "0.2"
path = "mail/mail-html-transformer"
registry = "proton"

[workspace.dependencies.proton-event-service]
version = "0.1.0"
path = "shared/event-service"
registry = "proton"

[workspace.dependencies.proton-network-monitor-service]
version = "0.1.0"
path = "shared/network-monitor-service"
registry = "proton"

[workspace.dependencies.proton-issue-reporter-service]
version = "0.1.0"
path = "shared/issue-reporter-service"
registry = "proton"

[workspace.dependencies.proton-issue-reporter-service-uniffi]
version = "0.1.0"
path = "shared/issue-reporter-service-uniffi"
registry = "proton"

[workspace.dependencies.proton-observability]
path = "shared/observability"

[workspace.dependencies.proton-mailto]
path = "shared/mailto"

[workspace.lints.rust]
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
trivial_casts = "warn"
unused_qualifications = "allow"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
# Useful to track missing comments on private items/code.
# missing_docs_in_private_items = "warn"
mut_mut = "warn"
#Disallow `println!`. Use `debug!` for debug output
# (which is provided by the `tracing` crate).
print_stdout = "warn"
unseparated_literal_suffix = "warn"
wrong_self_convention = "warn"
missing_panics_doc = "allow"
#TODO: Cargo build override rather than profile config(https://users.rust-lang.org/t/how-to-modify-profile-release-only-for-a-target/48811/3)

[profile.bench]
debug = true

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
panic = "unwind"

[profile.android]
inherits = "release"
panic = "abort"
opt-level = "s"
lto = true
incremental = false
codegen-units = 1

[profile.ios]
inherits = "release"
panic = "abort"
opt-level = "s"
codegen-units = 1

[profile.ios-debug]
inherits = "dev"
debug = true

# This profile gets about a 50% reduction in size compared to the default release profile.
[profile.small]
inherits = "release"
# opt-level = "s"            # We might want to experiment with "z" instead.
split-debuginfo = "packed"
lto = true                 # "Fat" LTO
incremental = false
# panic = 'abort' We might want to enable this
