load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "contact-database",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        normal = True,
    ) + [
        "//project/contact/rust/contact-lattice",
        "//project/mail/rust/shared/mail-db",
        "//project/mail/rust/shared/mail-local-id",
        "//project/mail/rust/shared/mail-proton-ids",
    ],
)
