[package]
name = "contact-database"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
mail-compat = ["dep:mail-stash", "mail-local-id/stash"]

[dependencies]
contact-lattice = { workspace = true }
mail-db = { workspace = true }
mail-local-id = { workspace = true }
mail-proton-ids = { workspace = true }
mail-stash = { workspace = true, optional = true }
proton-crypto-account = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
