load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "contact-lattice",
    srcs = glob(["src/**/*.rs"]),
    crate_features = [
        "lattice/serde",
        "mail-api-event-types/mocks",
        "mail-proton-ids/sql",
        "mail-utils",
        "proton-crypto-account/sql",
        "sql",
    ],
    edition = "2024",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        normal = True,
    ) + [
        "//project/core/rust/lattice",
        "//project/mail/rust/api/mail-api-event-types",
        "//project/mail/rust/api/mail-api-labels",
        "//project/mail/rust/shared/api-utils:mail-api-utils",
        "//project/mail/rust/shared/mail-proton-ids",
        "//project/mail/rust/shared/stash:mail-stash",
    ],
)
