[package]
name = "contact-lattice"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
lattice = { workspace = true }
mail-api-event-types = { workspace = true }
mail-api-labels = { workspace = true, optional = true }
mail-api-utils = { workspace = true, optional = true }
mail-proton-ids = { workspace = true }
mail-stash = { workspace = true, optional = true }
proton-crypto-account = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
serde_with = { workspace = true }
smart-default = { workspace = true }
wiremock = { workspace = true, optional = true }

[features]
default = []
sql = ["mail-proton-ids/sql", "dep:mail-stash", "proton-crypto-account/sql"]
mocks = ["dep:wiremock", "mail-api-event-types/mocks"]
mail-utils = ["dep:mail-api-utils", "dep:mail-api-labels"]

[lints]
workspace = true
