load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "core-feature-flags",
    srcs = glob(["src/**/*.rs"]),
    crate_features = ["mocks"],
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True),
)
