[package]
  name = "core-key"
  version = "0.1.0"
  edition.workspace = true

[dependencies]
  lattice = { path = "../lattice", features = ["core"] }
  proton-crypto-account = { workspace = true, features = ["facet"] }
  serde.workspace = true
  serde_json.workspace = true
  serde_repr.workspace = true
  serde_with.workspace = true
  thiserror.workspace = true

[lints]
  workspace = true
