load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "core-telemetry",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "core_telemetry",
    edition = "2024",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        normal = True,
    ),
)

rust_test(
    name = "core-telemetry-test",
    size = "small",
    crate = ":core-telemetry",
    proc_macro_deps = all_crate_deps(proc_macro_dev = True),
    deps = all_crate_deps(normal_dev = True),
)

exports_files(["Cargo.toml"])
