[package]
  name = "tcl"
  version = "0.1.0"
  edition = "2024"

[lib]
  crate-type = ["staticlib", "cdylib", "rlib"]
  name = "tcl"

[[bin]]
  name = "uniffi-bindgen-tcl"
  path = "uniffi-bindgen.rs"
  required-features = ["uniffi"]

[dependencies]
  uniffi = { version = "0.30", optional = true }
  uuid = "1.18"
  rusqlite = { version = "0.37", features = ["bundled"], optional = true }
  thiserror = "2.0"
  serde_json = "1.0"
  serde = { version = "1.0", features = ["derive"] }
  async-trait = "0.1"
  async-lock = "3.4"
  reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
  send_wrapper = { version = "0.6", features = ["futures"] }

[features]
  default = []
  sqlite = ["dep:rusqlite"]
  http = ["dep:reqwest"]
  uniffi = ["dep:uniffi", "uniffi/cli"]

[dev-dependencies]
  nameof = "1.3.0"
  tokio = { version = "1", features = ["rt", "macros"] }
  mockito = "1.5"
  tempfile = "3"
