[package]
name = "core-telemetry"
version = "0.1.0"
edition.workspace = true

[features]
default = []
sqlite = ["dep:rusqlite", "dep:async-lock"]
http = ["dep:reqwest"]
uniffi = ["dep:uniffi", "uniffi/cli", "http", "sqlite"]

[dependencies]
uuid = "1.18"
thiserror = "2.0"
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
# Optional deps
async-lock = { version = "3.4", optional = true }
rusqlite = { version = "0.37", features = ["bundled"], optional = true }
uniffi = { version = "0.30", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }

[dev-dependencies]
nameof = "1.3.0"
tokio = { version = "1", features = ["rt", "macros"] }
mockito = "1.5"
tempfile = "3"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "core_telemetry"

[lints]
workspace = true
