load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "lattice-quark",
    srcs = glob(["src/**/*.rs"]),
    compile_data = ["Cargo.toml"],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        "//project/core/rust/lattice",
    ],
)
