[package]
name = "lattice-quark"
version = "0.1.0"
edition.workspace = true

[dependencies]
lattice = { workspace = true }
derive_more = { workspace = true }
num_enum = { workspace = true }
regex = "1.10"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[lints]
workspace = true
