load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_doc_test", "rust_library", "rust_test")

rust_library(
    name = "lattice",
    srcs = glob(["src/**/*.rs"]),
    compile_data = ["Cargo.toml"],
    crate_features = [
        "auth",
        "core",
        "observability",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        "//project/core/rust/core-sensitive-data",
    ],
)

rust_test(
    name = "lattice-test",
    crate = ":lattice",
    proc_macro_deps = all_crate_deps(proc_macro_dev = True),
    deps = all_crate_deps(normal_dev = True),
)

rust_doc_test(
    name = "lattice-doc-test",
    crate = ":lattice",
)

# Ephemera-backed integration suite: drives real muon/SSO against a live
# Atlas backend, so it is non-hermetic -- tagged "manual" to keep it out of
# `bazel test //project/core/rust/...`. Run explicitly with a deployed backend.
rust_test(
    name = "lattice-integration-tests",
    srcs = glob([
        "tests/common/**/*.rs",
        "tests/common_sso/**/*.rs",
        "tests/lattice-integration/**/*.rs",
    ]),
    compile_data = ["tests/sso_cert.pem"],
    crate_root = "tests/lattice-integration/main.rs",
    edition = "2024",
    proc_macro_deps = all_crate_deps(proc_macro_dev = True),
    rustc_flags = ["--cfg=ci"],
    tags = ["manual"],
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ) + [
        ":lattice",
        "//project/core/rust/core-key",
        "//project/core/rust/lattice-muon2",
        "//project/core/rust/lattice-quark",
    ],
)

# Consumed via include_bytes! by account-crux-ffi's SSO integration tests.
exports_files(["tests/sso_cert.pem"])
