[package]
  name = "lattice"
  version = "0.1.0"
  edition.workspace = true

[features]
  core = ["auth", "dep:passkey", "dep:bitflags", "dep:proton-crypto-account", "dep:num_enum"]
  auth = ["dep:passkey", "dep:bitflags"]
  default = []
  quark = ["dep:regex"]
  facet = ["dep:facet"]
  serde = ["dep:serde", "dep:serde_json", "bitflags?/serde"]
  muon = ["dep:muon"]
  observability = ["serde"]
  full = ["core", "auth", "muon", "serde", "facet", "observability", "quark"]

[dependencies]
  serde = { optional = true, version = "^1.0.228", features = ["derive"] }
  serde_json = { optional = true, version = "1.0.149" }
  facet = { workspace = true, optional = true }
  zeroize = { version = "1.8.2" }
  derive_more = { workspace = true }
  passkey = { optional = true, version = "0.4" }
  bitflags = { optional = true, version = "2" }
  proton-crypto-account = { optional = true, workspace = true, features = ["facet"] }
  num_enum = { workspace = true, optional = true }
  muon = { workspace = true, optional = true }
  regex = { optional = true, version = "1.10" }

[dev-dependencies]
  muon = { workspace = true, features = ["full-native"] }
  tokio = { version = "1.50", features = ["full"] }
  futures = { version = "0.3" }
  rand = { version = "0.9" }
  async-compat = { version = "0.2" }
  lattice = { path = ".", features = ["full"] }
  totp-rs = { version = "5.7" }
  proton-crypto = { workspace = true }
  proton-crypto-account = { workspace = true, features = ["facet", "rustpgp"] }

  # SSO test dependencies (TLS via rustls; no default-tls/charset/http2/system-proxy)
  reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[lints]
  workspace = true
