[package]
  name = "lattice"
  version = "0.1.0"
  edition.workspace = true

[features]
  core = ["auth", "dep:passkey", "dep:bitflags", "dep:proton-crypto-account", "dep:num_enum"]
  auth = ["dep:passkey", "dep:bitflags", "dep:num_enum"]
  default = []
  quark = ["dep:regex", "dep:num_enum"]
  serde = ["dep:serde", "dep:serde_json", "bitflags?/serde", "core-sensitive-data/serde"]
  observability = ["serde"]
  full = ["core", "auth", "serde", "observability", "quark"]
  serde_qs = ["dep:serde_qs", "dep:url", "serde"]

[dependencies]
  core-sensitive-data.workspace = true
  serde = { optional = true, version = "^1.0.228", features = ["derive"] }
  serde_json = { optional = true, version = "1.0.149" }
  serde_qs = { workspace = true, optional = true }
  zeroize = { version = "1.8.2" }
  derive_more = { workspace = true }
  passkey = { optional = true, version = "0.4" }
  bitflags = { optional = true, version = "2" }
  proton-crypto-account = { optional = true, workspace = true, default-features = false, features = [
    "rustpgp",
  ] }
  num_enum = { workspace = true, optional = true }
  regex = { optional = true, version = "1.10" }
  url = { workspace = true, optional = true }

[dev-dependencies]
  lattice-muon2 = { path = "../lattice-muon2", features = ["quark"] }
  muon = { workspace = true, features = ["full-native"] }
  tokio = { version = "1.50", features = ["full"] }
  futures = { version = "0.3" }
  rand = { version = "0.9" }
  async-compat = { version = "0.2" }
  lattice = { path = ".", features = ["full"] }
  totp-rs = { version = "5.7" }
  proton-crypto = { workspace = true }
  proton-crypto-account = { workspace = true, default-features = false, features = ["rustpgp"] }

  # SSO test dependencies (TLS via rustls; no default-tls/charset/http2/system-proxy)
  reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[lints]
  workspace = true
