[workspace]
resolver = "2"
members = [
    "proton-action-queue",
    "proton-api-core",
    "proton-sqlite3",
    "proton-event-loop",
    "proton-core-common",
    "proton-vcard",
    "stash",
    "stash-macros",
]

[workspace.dependencies]
aes-gcm = { version = "0.10", features = ["zeroize", "std"] }
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.4"
chrono = { version = "0.4", features = ["default", "serde"] }
colored = "2.1.0"
flume = "0.11"
futures = "0.3"
ical = { version = "0.11", features = ["generator"] }
indoc = "2.0.5"
itertools = "0.13.0"
mockall = "0.12"
num_enum = "0.7.3"
oxilangtag = "0.1"
parking_lot = "0.12"
paste = "1"
pin-project = "1"
pretty_assertions = "1.4.0"
proton-api-core = { version = "=0.7.0", path = "proton-api-core", registry = "proton" }
proton-core-common = { version = "=0.7.0", path = "proton-core-common" }
proton-crypto-account = { version = "=0.6.2", registry = "proton", features = ["sql"] }
proton-event-loop = { version = "=0.7.25", path = "proton-event-loop", registry = "proton" }
proton-sqlite3 = { version = "=0.7.14", path = "proton-sqlite3", registry = "proton" }
proton-vcard = { version = "=0.1.2", path = "proton-vcard", registry = "proton" }
quick_cache = "0.6"
rand = "0.8"
regex = "1.10.5"
regex_static = "0.1"
rusqlite = { version = "0.31.0", features = [
    "bundled",
    "chrono",
    "functions",
    "trace",
    "uuid",
] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.5"
serde_json = "1"
serde_repr = "0.1"
stash = { version = "=0.1.14", path = "stash", registry = "proton" }
tempdir = "0.3.1"
tempfile = "3.10.1"
test-case = "3.3.1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
velcro = "0.5.4"
wiremock = "0.6.0"
zeroize = "1.7.0"

[workspace.dependencies.reqwest]
version = "0.11"
default-features = false
features = [
    "json",
    "deflate",
    "stream",
    "cookies",
    "multipart",
    "rustls",
    "rustls-tls",
    "socks",
]

[workspace.lints.rust]
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
trivial_casts = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
# Useful to track missing comments on private items/code.
# missing_docs_in_private_items = "warn"
mut_mut = "warn"
#Disallow `println!`. Use `debug!` for debug output
# (which is provided by the `log` crate).
print_stdout = "warn"
unseparated_literal_suffix = "warn"
wrong_self_convention = "warn"
