[workspace]
resolver = "2"
members = [
    "proton-mail-message-detector",
    "proton-api-mail",
    "proton-mail-wasm",
    "proton-mail-uniffi",
    "proton-mail-common",
    "proton-mail-utm-stripper",
]

[workspace.dependencies]
proton-api-core = { version = "0.2.0", registry = "proton", features = [
    "sql",
] }

proton-sqlite3 = { version="0.4.3", registry = "proton"}
proton-core-common = { version = "0.1.0", registry = "proton"}
proton-event-loop = { version = "0.4.0", registry = "proton"}
proton-async = { version = "0.3.0", registry = "proton"}
proton-action-queue = { version = "0.3.0", registry = "proton"}
uniffi = "0.27"
tracing-subscriber = "0.3"
lazy_static = "1"
url = "2.5.0"
wiremock = "0.6.0"

#[patch."https://gitlab.protontech.ch/rust/proton-api-core.git"]
#proton-api-core= {path = "../../proton-api-core/proton-api-core"}
#proton-core-common= {path = "../../proton-api-core/proton-core-common"}
#proton-sqlite3= {path = "../../proton-api-core/proton-sqlite3"}
#proton-async= {path = "../../proton-api-core/proton-async"}
#proton-event-loop = {path = "../../proton-api-core/proton-event-loop"}

[workspace.lints.rust]
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
trivial_casts = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
# Useful to track missing comments on private items/code.
# missing_docs_in_private_items ="warn"
mut_mut = "warn"
#Disallow `println!`. Use `debug!` for debug output
# (which is provided by the `log` crate).
print_stdout = "warn"
unseparated_literal_suffix = "warn"
wrong_self_convention = "warn"


#TODO: Cargo build override rather than profile config(https://users.rust-lang.org/t/how-to-modify-profile-release-only-for-a-target/48811/3)
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"   # Optimize for size.
