[workspace]
resolver = "2"
members = [
    "proton-mail-message-detector",
    "proton-api-mail",
    "proton-mail-wasm",
    "proton-mail-uniffi",
    "proton-mail-common",
    "proton-mail-utm-stripper",
    "uniffi-bindgen",
]

[workspace.dependencies]
proton-api-core = { version = "0.3.0", registry = "proton", features = [
    "sql",
] }
proton-sqlite3 = { version="0.6", registry = "proton"}
proton-core-common = { version = "0.3", registry = "proton"}
proton-event-loop = { version = "0.6", registry = "proton"}
proton-async = { version = "0.5", registry = "proton"}
proton-action-queue = { version = "0.5", registry = "proton"}
async-trait = "0.1"
futures = "0.3.30"
uniffi = "0.27.1"
tracing-subscriber = "0.3"
lazy_static = "1"
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
wiremock = "0.6.0"

#[patch."https://gitlab.protontech.ch/rust/proton-api-core.git"]
#proton-api-core= {path = "../../proton-api-core/proton-api-core"}
#proton-core-common= {path = "../../proton-api-core/proton-core-common"}
#proton-sqlite3= {path = "../../proton-api-core/proton-sqlite3"}
#proton-async= {path = "../../proton-api-core/proton-async"}
#proton-event-loop = {path = "../../proton-api-core/proton-event-loop"}

[workspace.lints.rust]
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
trivial_casts = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = "deny"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
# Useful to track missing comments on private items/code.
# missing_docs_in_private_items ="warn"
#Disallow `println!`. Use `debug!` for debug output
# (which is provided by the `log` crate).
print_stdout = "warn"
unseparated_literal_suffix = "warn"
wrong_self_convention = "warn"


#TODO: Cargo build override rather than profile config(https://users.rust-lang.org/t/how-to-modify-profile-release-only-for-a-target/48811/3)
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"  # Optimize for size.
