[package]
name = "xtask"
version = "0.2.1"
edition.workspace = true
publish = false

[dependencies]
cargo_metadata = "0.18"
xshell = "0.2"
anyhow = "1.0"
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
itertools = "0.13"
num_cpus = "1.16"
rand = "0.8"
regex = "1.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.15"
uuid = { version = "1.12", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap-cargo = { version = "0.14.1", features = ["cargo_metadata"] }

